--- a/exo-4oct/src/components/css/table.module.css
+++ b/exo-4oct/src/components/css/table.module.css
@@ -1,23 +1,35 @@
 .table {
-
+    border-collapse: collapse;
     max-width: 100%;
     width: 100%;
-}
+     border: 2px solid #000000; 
 
-.thead {
-    font-weight: bolder;
-    color: white;
-    background-color: black;
-    font-size: 1.3em;
-}
+    & thead {
+        background-color: rgb(0, 0, 0);
+        font-weight: bolder;
+        color: white;
+        font-size: 1.3em;
+    }
 
-.tbody {
-    border: 2px solid #000000;
-    background-color: aliceblue;
+    & tr:nth-child(even) {
+        background-color: rgb(202, 135, 135);
+    }
 
-}
+    & tbody {
+        
+        background-color: rgb(152, 207, 255);
+    
+    }
 
-.tr {
-    border-bottom: 1px solid #000000;
-  
+    
+    & tr {
+        border-bottom: 1px solid #000000;
+      
+    }
+
+    & tbody td:first-child {
+        text-transform: capitalize;
+    }
+    
+
 }
