--- a/TP-ToDoList/src/index.css
+++ b/TP-ToDoList/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -35,7 +35,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+*/
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -47,9 +47,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -66,4 +68,37 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} 
+
+.listContainer {
+  width: 99vw;
+  
+ & li {
+    display: flex;
+    padding: 2em;
+    margin-top: 0.5em;
+    align-items: center;
+
+    & > span {
+      width : 20vw;
+      height: 40px;
+      line-height: 40px;
+    }
+    
+    & button {
+      background-color: rgb(245, 143, 60);
+    }
+ }
+
+
+
+ & span:nth-child(2) {
+    margin-left: auto;
+ }
+
+ & span:last-child {
+    display: flex;
+    justify-content: center;
+ }
+
 }
