--- a/TP-ToDoList/src/components/css/formlist.module.css
+++ b/TP-ToDoList/src/components/css/formlist.module.css
@@ -1,11 +1,12 @@
 .form {
-    position: absolute;
-    top: 0;
+/*     position: absolute;
+    top: 0; */
     width: 100vw;
     height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: burlywood;
 
     & .grpForm {  /* marche pas... */
           background-color: aqua;
@@ -19,5 +20,9 @@
 
     & > button {
         background-color: rgb(150, 150, 228);
+    }
+
+    & > div:first-child > input {
+        width: 40vw ;
     }
 }
