REDUX exo 1 maj css

--- a/REDUX/gest-produits/src/App.css
+++ b/REDUX/gest-produits/src/App.css
@@ -61,9 +61,14 @@ li:first-child {
 form {
   display: flex;
   flex-direction: column;
+
+  & div {
+    margin-bottom: 0.5em;
+  }
  
   & button {
     background-color: green;
+    margin-top: 1em;
     font-weight: bold;
     color: white;
   }
