--- a/REDUX/monPokedex/src/index.css
+++ b/REDUX/monPokedex/src/index.css
@@ -3,4 +3,5 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
